--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nrwl/react": "14.1.4",
     "@nrwl/web": "14.1.4",
     "@nrwl/workspace": "14.1.4",
+    "@nx-extend/gcp-cloud-run": "^3.4.0",
     "@nx-go/nx-go": "^2.5.0",
     "@testing-library/react": "13.1.1",
     "@types/jest": "27.4.1",
